# home-automation

./: LICENSE  README.md  renovate.json
.github/: dependabot.yml
dashboard/: README.md  index.html  manifest.json
dashboard/css/: dashboard.css
dashboard/js/: dashboard.js
docs/: jbd.md  vebus.md
energy/jbd-bms/: Dockerfile  config.yml  pyproject.toml  run.py
energy/jbd-bms/jbd/: __init__.py  jbd.py  logging.py  registers.py
energy/victron-multiplus-ii/: Dockerfile  config.yml  pyproject.toml  run.py  test.py
garage_door/: README.md  garage_door.py
garage_door_esp8266/: README.md  garage_door_controller.ino
garage_door_python/: README.md  ont.py
home-assistant/: dashboard.yaml
scripts/: apc_ups.py  clean_mysql.sh  garage_door.py  snmp_network.py
